<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.irfan.moviecatalogue.ui.activity.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/movie_s_image"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop"
            android:tint="#cc000000"
            android:background="#cc000000"
            tools:ignore="UseAppTint" />

        <View
            android:id="@+id/image_poster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/movie_s_image"
            app:layout_constraintDimensionRatio="3:4"
            app:layout_constraintWidth_percent="0.415"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="80dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/darker_gray"/>

        <View
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toTopOf="@+id/image_poster"
            android:background="@android:color/darker_gray"/>

        <View
            android:id="@+id/tv_release"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:background="@android:color/darker_gray"/>

        <View
            android:id="@+id/tv_duration"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_release"
            android:background="@android:color/darker_gray"/>

        <View
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/image_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_duration"
            android:background="@android:color/darker_gray"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:elevation="0dp"
            android:outlineProvider="none"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_poster"
            tools:layout_editor_absoluteX="16dp">

            <View
                android:layout_width="match_parent"
                android:background="@drawable/bg_cardview"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="8dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:visibility="invisible"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/darker_gray"/>

                <View
                    android:id="@+id/tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@android:color/darker_gray"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>