...
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tv"
            android:layout_width="match_parent"
            android:layout_marginVertical="4dp"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_movie"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
...
