...
            android:layout_alignParentTop="true"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:background="@color/color_primary"
        app:tabSelectedTextColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:tabIndicatorColor="@color/white"
        android:layout_height="wrap_content"
...
